--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,15 @@
 .vscode/.browse.c_cpp.db*
 .vscode/c_cpp_properties.json
 .vscode/launch.json
+
+
+# Created by https://www.gitignore.io/api/platformio
+# Edit at https://www.gitignore.io/?templates=platformio
+
+### PlatformIO ###
+.pioenvs
+.piolibdeps
+.clang_complete
+.gcc-flags.json
+
+# End of https://www.gitignore.io/api/platformio
